--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,7 +85,8 @@
         android:id="@+id/btn_CreateAcc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create Account" />
+        android:text="Create Account"
+        android:onClick="clk_NewUserRegister"/>
 
 <!--    <Button
         android:id="@+id/btnTest"
