UI for Appointment Detail added

--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -11,6 +11,80 @@
     <TextView
         android:id="@+id/txtBookingActivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="TextView" />
+
+    <Spinner
+        android:id="@+id/spinDrList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+ <!--   <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight=".93">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/listgrad"
+            android:text="@string/actionbar_text"
+            style="@style/actionbar_text"/>
+    </LinearLayout>-->
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight=".07">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="0.1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:hint="Wed,4 Apr 2018"
+                android:textSize="24sp"
+                android:layout_gravity="center_vertical"
+                android:textAlignment="center"
+                android:background="@color/dashboard_segment3"
+                />
+
+            <TextView
+                android:id="@+id/txtTime"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:hint="hh:mm  AM/PM"
+                android:textSize="24sp"
+                android:layout_gravity="center_vertical"
+                android:textAlignment="center"
+                android:background="@color/dashboard_segment4"
+                />
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnBookApp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.05"
+            android:text="S A V E" />
+
+        <Button
+            android:id="@+id/btnCancelApp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cancel Appointment" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
