Cancel btn invisible for new-booking + SaveBtn will not duplicate booking when coming from AllBookingsList

--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -26,7 +26,7 @@
     <Spinner
         android:id="@+id/spinDrList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:background="@color/dashboard_segment4_h"
         android:entries="@array/DrNames"
@@ -99,6 +99,7 @@
 
             <Button
                 android:id="@+id/btnCancelApp"
+                android:visibility="invisible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Cancel Appointment"
