--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -53,8 +53,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/TF_location"
         android:layout_toEndOf="@+id/B_hopistals"
+        android:enabled="false"
         android:onClick="onClick"
-        android:text="Schools" />
+        android:text="Schools"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/B_restaurants"
@@ -62,8 +64,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/TF_location"
         android:layout_toEndOf="@+id/B_schools"
+        android:enabled="false"
         android:onClick="onClick"
-        android:text="Restautants" />
+        android:text="Restautants"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/B_to"
@@ -71,6 +75,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/B_restaurants"
         android:layout_toEndOf="@+id/B_restaurants"
+        android:enabled="false"
         android:onClick="onClick"
-        android:text="To" />
+        android:text="To"
+        android:visibility="invisible" />
 </RelativeLayout>
