--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -24,27 +24,38 @@
         />
 
 
-    <!--android:entries="@array/DrNames"-->
-    <Spinner
-        android:id="@+id/spinDrList"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/dashboard_segment4_h"
-        tools:listitem="@layout/support_simple_spinner_dropdown_item" />
+    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingTop="10dp"><!--android:entries="@array/DrNames"-->
+        <Spinner
+            android:id="@+id/spinDrList"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight=".8"
+            android:background="@color/dashboard_segment4_h"
+            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
 
- <!--   <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".93">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/listgrad"
-            android:text="@string/actionbar_text"
-            style="@style/actionbar_text"/>
-    </LinearLayout>-->
+        <Button
+            android:id="@+id/btnDrProfile"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight=".2"
+            android:text="Profile"
+            android:textSize="12sp"
+            android:onClick="clk_drProfile"/>
+    </LinearLayout>
+
+
+    <!--   <LinearLayout
+           android:orientation="vertical"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_weight=".93">
+           <TextView
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:background="@drawable/listgrad"
+               android:text="@string/actionbar_text"
+               style="@style/actionbar_text"/>
+       </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
