instead of app.doctor (name) now uses (app.Id_Doc==dr.id_doc) in BookingDetails + displays specialty in dropdown list

--- a/app/src/main/res/layout/activity_dr_profile.xml
+++ b/app/src/main/res/layout/activity_dr_profile.xml
@@ -32,5 +32,17 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text='@{dr.specialty}' />
+    <TextView
+        android:id="@+id/txtDrEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text='@{"Email: " + dr.email}' />
+    <TextView
+        android:id="@+id/txtDrPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text='@{"Phone: " + dr.phone}' />
 </LinearLayout>
 </layout>
