--- a/app/src/main/res/layout/eachbooking.xml
+++ b/app/src/main/res/layout/eachbooking.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent" android:orientation="vertical">
 
     <TextView
+        android:id="@+id/rowPtName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/rowTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
