Spinner for Specilty added + it filters list of Dr.s by specialty

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,4 +10,12 @@
         <item>Pediatrician</item>
     </string-array>
 
+    <string-array name="DrSpecialty" >
+        <item>All</item>
+        <item>General Physician</item>
+        <item>Gynecologist</item>
+        <item>Pediatrician</item>
+        <item>Surgeon</item>
+    </string-array>
+
 </resources>
