--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -23,7 +23,23 @@
 
         />
 
+    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingTop="10dp"><!--android:entries="@array/DrNames"-->
+        <Spinner
+            android:id="@+id/spinSpecialtyList"
 
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight=".8"
+            android:background="@color/dashboard_segment4_h"
+            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight=".2"
+            android:textSize="12sp"/>
+
+
+    </LinearLayout>
     <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingTop="10dp"><!--android:entries="@array/DrNames"-->
         <Spinner
             android:id="@+id/spinDrList"
