***LAST commit before creating a separate branch to implement Angela's Layout***

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorActionBar">#c5c8d1</color>
+    <color name="colorBtn">#7b818f</color>
+    <color name="colorBtnTxt">#fdfdfe</color>
+    <color name="colorTxt">#7b818f</color>
+    <color name="colorBg">#fdfdfe</color>
+    <color name="colorBorders">#a7aab3</color>
+
+
+
+
+
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
