--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,6 +7,8 @@
     tools:context=".Dashboard"
     android:orientation="vertical">
 
+
+
     <Button
         android:id="@+id/btnAppointments"
         android:layout_width="match_parent"
@@ -41,4 +43,12 @@
         android:onClick="clk_newAppPlacePicker"
         android:text="New Appointment - PlacePicker"
         android:visibility="gone" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clk_Testing"
+        android:text="Testing" />
+
 </LinearLayout>
