--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,54 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Use DrawerLayout as root container for activity -->
+<!--https://developer.android.com/training/implementing-navigation/nav-drawer-->
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Dashboard"
-    android:orientation="vertical">
+    android:id="@+id/drawer_Dashboard"
+    >
 
-
-
-    <Button
-        android:id="@+id/btnAppointments"
+    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="30dp"
-        android:text="All Appointments"
-        android:onClick="clk_allAppointments"/>
+        android:layout_height="match_parent"
+        tools:context=".Dashboard"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnMap"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="30dp"
-        android:text="New Appointment - Map"
-        android:onClick="clk_newAppMap"/>
+        <!-- Action Bar custom = https://www.youtube.com/watch?v=u9gDooP8IhU-->
+        <include layout="@layout/drawer_actionbar" />
 
-    <Button
-        android:id="@+id/btnSettings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Settings"
-        android:onClick="clk_Settings"/>
 
-    <Button
-        android:id="@+id/btnPlacePicker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="30dp"
-        android:onClick="clk_newAppPlacePicker"
-        android:text="New Appointment - PlacePicker"
-        android:visibility="gone" />
+        <Button
+            android:id="@+id/btnAppointments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:text="All Appointments"
+            android:onClick="clk_allAppointments"/>
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="clk_Testing"
-        android:text="Testing" />
+        <Button
+            android:id="@+id/btnMap"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:text="New Appointment - Map"
+            android:onClick="clk_newAppMap"/>
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btnSettings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Settings"
+            android:onClick="clk_Settings"/>
+
+        <Button
+            android:id="@+id/btnPlacePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:onClick="clk_newAppPlacePicker"
+            android:text="New Appointment - PlacePicker"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="clk_Testing"
+            android:text="Testing" />
+
+    </LinearLayout>
+
+    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+    <!--https://developer.android.com/training/implementing-navigation/nav-drawer-->
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/navDashboard"
+        android:fitsSystemWindows="true"
+        android:layout_gravity="start"
+        app:menu="@menu/menuoptions"
+        app:headerLayout="@layout/drawer_header"
+        />
+    <!--icons & header for navigation = https://www.youtube.com/watch?v=A-AI5AbLVqo-->
+</android.support.v4.widget.DrawerLayout>
