--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,10 @@
     tools:context="comp231.drbooking.Login"
     android:orientation="vertical">
 
+    <!-- Action Bar custom = https://www.youtube.com/watch?v=u9gDooP8IhU-->
+<!--
+    <include layout="@layout/drawer_actionbar" />
+-->
 
 <!--    <RadioGroup
         android:id="@+id/radGp"
