--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -5,14 +5,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".BaseActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/drawer_layout">
 
     <!--Gooood : https://stackoverflow.com/questions/4922641/sliding-drawer-appear-in-all-activities#-->
     <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
-    <FrameLayout
-        android:id="@+id/drawer_frame"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- Action Bar custom = https://www.youtube.com/watch?v=u9gDooP8IhU-->
+        <include layout="@layout/drawer_actionbar" />
+
+        <FrameLayout
+            android:id="@+id/drawer_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
 
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
     <!--https://developer.android.com/training/implementing-navigation/nav-drawer-->
