--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -7,6 +7,10 @@
     tools:context="comp231.drbooking.BookingDetails"
     android:orientation="vertical">
 
+    <!-- Action Bar custom = https://www.youtube.com/watch?v=u9gDooP8IhU-->
+<!--
+    <include layout="@layout/drawer_actionbar" />
+-->
 
     <TextView
         android:id="@+id/txtBookingActivity"
