--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Use DrawerLayout as root container for activity -->
 <!--https://developer.android.com/training/implementing-navigation/nav-drawer-->
-<android.support.v4.widget.DrawerLayout
+<!--<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +9,7 @@
     android:layout_height="match_parent"
     tools:context=".Dashboard"
     android:id="@+id/drawer_Dashboard"
-    >
+    >-->
 
     <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,8 +21,9 @@
         android:orientation="vertical">
 
         <!-- Action Bar custom = https://www.youtube.com/watch?v=u9gDooP8IhU-->
+<!--
         <include layout="@layout/drawer_actionbar" />
-
+-->
 
         <Button
             android:id="@+id/btnAppointments"
@@ -70,7 +71,7 @@
 
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
     <!--https://developer.android.com/training/implementing-navigation/nav-drawer-->
-    <android.support.design.widget.NavigationView
+<!--    <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/navDashboard"
@@ -78,6 +79,8 @@
         android:layout_gravity="start"
         app:menu="@menu/menuoptions"
         app:headerLayout="@layout/drawer_header"
-        />
+        />-->
     <!--icons & header for navigation = https://www.youtube.com/watch?v=A-AI5AbLVqo-->
+<!--
 </android.support.v4.widget.DrawerLayout>
+-->
