--- a/app/src/main/res/layout/activity_new_user_register.xml
+++ b/app/src/main/res/layout/activity_new_user_register.xml
@@ -8,6 +8,11 @@
     android:orientation="vertical"
     android:id="@+id/layNewUser">
 
+    <!-- Action Bar custom = https://www.youtube.com/watch?v=u9gDooP8IhU-->
+<!--
+    <include layout="@layout/drawer_actionbar" />
+-->
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
