--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="comp231.drbooking.Login"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="comp231.drbooking.Login">
 
     <!-- Action Bar custom = https://www.youtube.com/watch?v=u9gDooP8IhU-->
-<!--
+    <!--
     <include layout="@layout/drawer_actionbar" />
 -->
 
-<!--    <RadioGroup
+    <!--    <RadioGroup
         android:id="@+id/radGp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -35,22 +35,41 @@
             android:text="Faculty" />
     </RadioGroup>-->
 
+    <TextView
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/widgetMargLeft"
+        android:layout_marginRight="@dimen/widgetMargLeft"
+        android:layout_marginTop="50dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Login"
+        android:textSize="24sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="@dimen/widgetMargLeft"
+        android:layout_marginRight="@dimen/widgetMargLeft"
+        android:layout_marginTop="30dp"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/line" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/userName" />
-
         <EditText
             android:id="@+id/txtLoginName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="@dimen/widgetMargLeft"
+            android:layout_marginRight="@dimen/widgetMargLeft"
             android:layout_weight="3"
             android:hint="@string/userName"
             android:text="name" />
@@ -61,43 +80,53 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/password" />
-
         <EditText
             android:id="@+id/txtLoginPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/widgetMargLeft"
+            android:layout_marginRight="@dimen/widgetMargLeft"
             android:layout_weight="3"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:text="name" />
+            tools:text="name" />
     </LinearLayout>
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/btnHt"
+        android:layout_marginLeft="@dimen/widgetMargLeft"
+        android:layout_marginRight="@dimen/widgetMargLeft"
+        android:layout_marginTop="50dp"
+        android:onClick="clk_Login"
+        android:text="Log In" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Log In"
-        android:onClick="clk_Login"/>
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="@dimen/widgetMargLeft"
+        android:layout_marginRight="@dimen/widgetMargLeft"
+        android:layout_marginTop="30dp"
+        app:srcCompat="@drawable/line" />
 
     <Button
         android:id="@+id/btn_CreateAcc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Create Account"
-        android:onClick="clk_NewUserRegister"/>
+        android:layout_height="@dimen/btnHt"
+        android:layout_marginLeft="@dimen/widgetMargLeft"
+        android:layout_marginRight="@dimen/widgetMargLeft"
+        android:onClick="clk_NewUserRegister"
+        android:text="Create Account" />
 
-<!--    <Button
-        android:id="@+id/btnTest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Map"
-        android:onClick="clk_btnTest"/>-->
+    <!--    <Button
+            android:id="@+id/btnTest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Map"
+            android:onClick="clk_btnTest"/>-->
 
     <!--   <Button
            android:id="@+id/btnAllPref"
@@ -115,7 +144,6 @@
            android:onClick="DeleteWholeDB"
            android:text="Delete Database"
            android:visibility="invisible" />-->
-
 
 
 </LinearLayout>
