--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,14 +16,15 @@
         android:inputType="textPersonName"
         android:text="940 progress Ave Toronto" />
 
-    <Button
+    <ImageButton
         android:id="@+id/B_search"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
+        android:layout_width="50dp"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/TF_location"
         android:onClick="onClick"
-        android:text="Search" />
+        android:text="Search"
+        android:src="@drawable/search"/>
 
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -40,8 +41,8 @@
 
     <Button
         android:id="@+id/B_hopistals"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/TF_location"
         android:onClick="onClick"
