--- a/app/src/main/res/layout/drawer_actionbar.xml
+++ b/app/src/main/res/layout/drawer_actionbar.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerActBar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:background="@color/colorActionBar"
     app:navigationIcon="@drawable/menu">
 
