--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -3,6 +3,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@color/colorTxt">
+    android:background="@color/colorTxtBxTxt">
 
 </android.support.constraint.ConstraintLayout>
